syntax = "proto3";
package cluster;


service HealthCheck {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

service PartitionProto{
  rpc MakeNodeAliveNotServing (AnnounceAliveRequest) returns (Empty);
  rpc MakeNodeAliveServing (AnnounceAliveRequest) returns (Empty);
}

message HealthCheckRequest {
  bool ping = 1;
}

message HealthCheckResponse {
  bool pong = 1;
}

message AnnounceAliveRequest{
  string host_name = 1;
  repeated uint32 leader_partitions = 2;
  repeated uint32 follower_partitions = 3;
}

message Empty{}